--- a/src/shared/ui/appDropdown/AppDropdown.module.scss
+++ b/src/shared/ui/appDropdown/AppDropdown.module.scss
@@ -15,7 +15,7 @@
 .menu {
   background: var(--card-bg);
   position: absolute;
-  z-index: 10000;
+  z-index: var(--dropdown-z-index);
   border-radius: 5px;
   border: 1px solid var(--primary-color);
 
