--- a/src/shared/ui/appListbox/AppListbox.module.scss
+++ b/src/shared/ui/appListbox/AppListbox.module.scss
@@ -13,7 +13,7 @@
 .options {
   background: var(--listbox-bg);
   position: absolute;
-  z-index: 10000;
+  z-index: var(--dropdown-z-index);
   border-radius: 5px;
   box-shadow: 4px 4px 8px var(--listbox-bg);
   min-width: 100%;
