--- a/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
+++ b/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
@@ -11,7 +11,7 @@
   position: absolute;
   right: -32px;
   bottom: 32px;
-  z-index: 100000;
+  z-index: var(--sidebar-collapse-button-z-index);
 }
 
 .switchers {
